--- a/AngieBot/default.htm
+++ b/AngieBot/default.htm
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Sticky Footer Template for Bootstrap</title>
+    <title>AngieBot</title>
 
     <!-- Bootstrap core CSS -->
     <link href="Assets/bootstrap.min.css" rel="stylesheet">
